# particles

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  codebook.toml  flake.nix
assets/: assets
assets/shaders/: particle_billboard.wgsl  particle_compute.wgsl  particle_instanced.wgsl  particle_points.wgsl  particle_quad_gen.wgsl
crates/astra-gui/: Cargo.toml
crates/astra-gui-fonts/: Cargo.toml
crates/astra-gui-fonts/src/: lib.rs
crates/astra-gui-interactive/: Cargo.toml
crates/astra-gui-interactive/src/: button.rs  lib.rs  slider.rs  text_input.rs  toggle.rs
crates/astra-gui-text/: Cargo.toml
crates/astra-gui-text/src/: lib.rs
crates/astra-gui-wgpu/: Cargo.toml
crates/astra-gui-wgpu/examples/: button.rs  corner_shapes.rs  interactive.rs  layout.rs  layout_nodes.rs  overflow.rs  stroke.rs  stroke_simple.rs  stroke_test.rs  text.rs
crates/astra-gui-wgpu/src/: events.rs  input.rs  instance.rs  interactive_state.rs  lib.rs  tessellator.rs  vertex.rs
crates/astra-gui-wgpu/src/shaders/: text.wgsl  ui.wgsl  ui_sdf.wgsl
crates/astra-gui-wgpu/src/text/: atlas.rs  debug_font.rs  mod.rs  vertex.rs
crates/astra-gui-wgpu/src/text/cosmic/: mod.rs
crates/astra-gui/src/: color.rs  content.rs  debug.rs  hit_test.rs  layout.rs  lib.rs  measure.rs  mesh.rs  node.rs  output.rs  primitives.rs  style.rs  tessellate.rs  transition.rs
crates/debug-ui/: Cargo.toml
crates/debug-ui/src/: lib.rs
crates/orbit-camera/: Cargo.toml
crates/orbit-camera/src/: lib.rs
crates/particle-physics/: Cargo.toml
crates/particle-physics/src/: constants.rs  forces.rs  lib.rs  particle.rs
crates/particle-renderer/: Cargo.toml
crates/particle-renderer/src/: camera.rs  hadron_renderer.rs  lib.rs  nucleus_renderer.rs  renderer.rs
crates/particle-renderer/src/picking/: mod.rs  overlay.rs  renderer.rs
crates/particle-renderer/src/shaders/: hadron.wgsl  nucleus.wgsl  particle.wgsl  picking.wgsl  picking_overlay.wgsl
crates/particle-simulation/: Cargo.toml
crates/particle-simulation/src/: lib.rs  params.rs  simulation.rs
crates/particle-simulation/src/shaders/: forces.wgsl  hadron_detection.wgsl  hadron_validation.wgsl  integrate.wgsl  nucleus_detection.wgsl  nucleus_validation.wgsl  selection_resolve.wgsl
crates/particles/: Cargo.toml
crates/particles-core/: Cargo.toml
crates/particles-core/src/: lib.rs
crates/particles-render/: Cargo.toml
crates/particles-render/src/: compute_billboard.rs  lib.rs
crates/particles/src/: main.rs
docs/motion-canvas/: package.json
docs/motion-canvas/src/: project.ts
docs/motion-canvas/src/components/: Hadron.tsx  Quark.tsx
docs/motion-canvas/src/scenes/: quark-formation.tsx
implementation-methods/gpu-instancing/: method-1-custom-material.md  method-2-single-merged-mesh.md  method-3-point-cloud-rendering.md  method-4-point-primitives.md  method-5-compute-shader-quads.md
plan/: 0.4.0.md  TODO.md  astr-gui-improvements.md  astra-gui-interactive.md  astra-gui.md  claude-thread.md  context.md
plan/aa/: actionable.md  comprehensive.md
src/: gui.rs  main.rs
src/gui_data/: mod.rs
