[workspace]
members = [
    "crates/particle-physics",
    "crates/particle-simulation",
    "crates/particle-renderer",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core wgpu for GPU programming
wgpu = "27.0"
# Window creation and event handling
winit = "0.30"
# Async runtime for wgpu initialization
pollster = "0.4"
# Linear algebra for 3D math
glam = "0.30"
# Random number generation
rand = "0.9"
# Byte conversion for GPU buffers
bytemuck = { version = "1.24", features = ["derive"] }
# Catppuccin color palette
catppuccin = "2.6"
# Logging
log = "0.4"
env_logger = "0.11"
# UI
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"

[package]
name = "particles"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
particle-physics = { path = "crates/particle-physics" }
particle-simulation = { path = "crates/particle-simulation" }
particle-renderer = { path = "crates/particle-renderer" }
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
glam.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
bytemuck.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
