[workspace]
members = [
    "crates/particle-physics",
    "crates/particle-simulation",
    "crates/particle-renderer",
]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core wgpu for GPU programming.
wgpu = "28.0"
# Window creation and event handling
winit = "0.30"
# Async runtime for wgpu initialization
pollster = "0.4"
# Linear algebra for 3D math
glam = "0.30"
# Random number generation
rand = "0.9"
# Byte conversion for GPU buffers
bytemuck = { version = "1.24", features = ["derive"] }
# Catppuccin color palette
catppuccin = "2.6"
# Logging
log = "0.4"
env_logger = "0.11"
# Astra GUI (pin to v0.7.2)
astra-gui = { git = "https://github.com/jens-hj/astra-gui.git", tag = "v0.7.3" }
astra-gui-wgpu = { git = "https://github.com/jens-hj/astra-gui.git", tag = "v0.7.3" }
astra-gui-text = { git = "https://github.com/jens-hj/astra-gui.git", tag = "v0.7.3" }
astra-gui-interactive = { git = "https://github.com/jens-hj/astra-gui.git", tag = "v0.7.3" }

[package]
name = "particles"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
particle-physics = { path = "crates/particle-physics" }
particle-simulation = { path = "crates/particle-simulation" }
particle-renderer = { path = "crates/particle-renderer" }
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
glam.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
bytemuck.workspace = true
astra-gui.workspace = true
astra-gui-wgpu.workspace = true
astra-gui-text.workspace = true
astra-gui-interactive.workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
