[package]
name = "astra-gui-wgpu"
version = "0.1.0"
edition = "2021"
description = "WGPU rendering backend for astra-gui"

[features]
default = ["text-cosmic"]
text-cosmic = ["dep:cosmic-text"]

[dependencies]
astra-gui = { workspace = true }
astra-gui-text = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { version = "1.24", features = ["derive"] }
cosmic-text = { version = "0.15", optional = true }

[dev-dependencies]
winit = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
astra-gui-interactive = { workspace = true }
